Fixed css layout issue and spring bean service unit test

--- a/modules/citrus-admin/src/main/webapp/styles/citrus-admin.css
+++ b/modules/citrus-admin/src/main/webapp/styles/citrus-admin.css
@@ -378,7 +378,7 @@ span.message-outbound {
 }
 
 #footer .tab-content {
-	min-height: 500px;
+	min-height: 600px;
     background-color: #ffffff;
 }
 
